--- a/Snake/Snake.csproj
+++ b/Snake/Snake.csproj
@@ -44,9 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Game.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Search.cs" />
+    <Compile Include="SearchState.cs" />
+    <Compile Include="SnakeBody.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
